2014-03-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16731]
	* sysdeps/i386/fpu/e_log.S (__ieee754_log): Take absolute value
	when x - 1 is zero.
	* sysdeps/i386/fpu/e_logf.S (__ieee754_logf): Likewise.
	* sysdeps/i386/fpu/e_logl.S (__ieee754_logl): Likewise.
	* sysdeps/i386/i686/fpu/e_logl.S (__ieee754_logl): Likewise.
	* sysdeps/ieee754/dbl-64/e_log.c (__ieee754_log): Return +0 when
	argument is 1.
	* sysdeps/ieee754/ldbl-128/e_logl.c (__ieee754_logl): Likewise.
	* sysdeps/x86_64/fpu/e_logl.S: Take absolute value when x - 1 is
	zero.
	* math/libm-test.inc (log_test): Use ALL_RM_TEST.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2014-03-21  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* scripts/bench.pl: Remove file.
	* scripts/bench.py: New benchmark script.
	* benchtests/Makefile ($(objpfx)bench-%.c): Use it.
	* benchtests/README: Mention python dependency.
	* scripts/pylintrc: New file.
	* scripts/pylint: New file.

	* bits/mathdef.h: Use #ifdef instead of #if.
	* sysdeps/arm/bits/mathdef.h [defined __USE_ISOC99 && defined
	_MATH_H && !defined _MATH_H_MATHDEF]: Likewise.
	* sysdeps/tile/bits/mathdef.h [defined __USE_ISOC99 && defined
	_MATH_H && !defined _MATH_H_MATHDEF]: Likewise.
	* sysdeps/x86/bits/mathdef.h [defined __USE_ISOC99 && defined
	_MATH_H && !defined _MATH_H_MATHDEF]: Likewise.

2014-03-20  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
	    Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* string/strpbrk.c (strpbrk): Using macro to redefine symbol name.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strpbrk-power7
	and strpbrk-ppc64 objects.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Add new strpbrk optimized symbols.
	* sysdeps/powerpc/powerpc64/multiarch/strpbrk-power7.S: New file:
	multiarch strpbrk for POWER7.
	* sysdeps/powerpc/powerpc64/multiarch/strpbrk-ppc64.c: New file:
	multiarch strpbrk for PPC64.